// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input  should render an input 1`] = `
<div
  className="Input__Input-yhnwl0-0 gqztBg"
/>
`;

exports[`Input  should support error 1`] = `
<div
  className="Input__Input-yhnwl0-0 hviOhM"
/>
`;
